# dfir-timeline

./: .gitignore  Cargo.toml  README.md
docs/: flowrecord.hexpat
examples/: bodyfile.rs  bodyfile2avro.rs  bodyfile2msgpack.rs  schema.rs
flow-record-common/: Cargo.toml
flow-record-common/src/: error.rs  field_type.rs  flow_record.rs  lib.rs  object.rs  object_type.rs  record.rs  record_descriptor.rs  record_field.rs  record_pack.rs  to_msgpack_value.rs
flow-record-common/src/types/: filesize.rs  mod.rs  path.rs  unix_file_mode.rs
flow-record-derive/: Cargo.toml
flow-record-derive/src/: derive_record.rs  ext_data.rs  ext_type.rs  field_info.rs  field_type.rs  lib.rs  record_attributes.rs  record_descriptor.rs  record_field.rs  struct_info.rs  without_lifetimes.rs
record-types/: Cargo.toml
record-types/src/: field_descriptor.rs  field_type.rs  has_record_descriptor.rs  lib.rs  record_descriptor.rs  record_field.rs  to_field_descriptor.rs
recorddescriptor_derive/: Cargo.toml
recorddescriptor_derive/src/: field_type.rs  lib.rs  record.rs  record_descriptor.rs  record_field.rs
src/: action.rs  artifact.rs  dfir_record.rs  event.rs  event_data.rs  flow_record.rs  has_record_descriptor.rs  lib.rs  raw_flow_record.rs  record.rs  record_pack_type.rs  ser_tz.rs  serializer.rs  timeline_record.rs  timestamp.rs
src/artifacts/: mod.rs  posix_file.rs  posix_file_record.rs
src/artifacts/posix/: file_mode.rs  file_record.rs  file_type.rs  mod.rs
tests/: test-records.csv  test-records.py  test-records.records
