[package]
name = "flow-record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8"
rmp-serde = "1.3.0"
serde = {version="1.0", features = ["derive"]}
chrono = {version="0.4", features=["serde"]}
bodyfile = "0.1"
flow-record-derive = {path="flow-record-derive"}
flow-record-common = {path="flow-record-common"}
