[package]
name = "flow-record"
version = "0.1.1"
edition = "2021"
description = "library to create records to be used by the rdump cli utility"
repository = "https://github.com/janstarke/flow-record"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8"
rmpv = "1.3.0"
rmp-serde = "1.3.0"
serde = {version="1.0", features = ["derive"]}
chrono = {version="0.4", features=["serde"]}
bodyfile = "0.1"
#flow-record-derive = "0.1.0"
#flow-record-common = "0.1.0"
flow-record-derive = {path="flow-record-derive"}
flow-record-common = {path="flow-record-common"}
binrw = "0.14"
