[workspace]
members=["flow-record-common", "flow-record-derive" ]

[workspace.package]
version = "0.4.3"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/flow-record"
repository = "https://github.com/janstarke/flow-record"

[workspace.dependencies]
flow-record-derive = "0.4.3"
flow-record-common = "0.4.3"
#flow-record-derive = { path = "flow-record-derive" }
#flow-record-common = { path = "flow-record-common" }
rmpv = "1.3.0"
chrono = "0.4"

[package]
name = "flow-record"
description = "library to create records to be used by the rdump cli utility"
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flow-record-derive.workspace = true
flow-record-common.workspace = true
rmpv.workspace = true
chrono.workspace = true
bodyfile = "0.1"
binrw = "0.14"
sha2 = "0.10.8"
bitflags = "2.6.0"
lazy-regex = "3.3.0"
strum = { version = "0.26.3", features = ["derive"] }
