[package]
name = "flow-record-common"
version = "0.3.1"
edition = "2021"
description = "library to create records to be used by the rdump cli utility"
repository = "https://github.com/janstarke/flow-record"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"

[dependencies]
getset = "0.1.3"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rmpv = "1.3.0"
thiserror = "1.0.63"
binrw = "0.14"
chrono = "0.4"
sha2 = "0.10.8"
file-mode = "0.1.2"
