[package]
name = "flow-record-common"
description = "common types used by flow-record and flow-record-derive"
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
getset = "0.1.3"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rmpv.workspace = true
thiserror = "1.0.63"
binrw = "0.14"
chrono.workspace = true
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
