[package]
name = "flow-record-derive"
version = "0.1.0"
edition = "2021"
description = "library to create records to be used by the rdump cli utility"
repository = "https://github.com/janstarke/flow-record"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="2.0", features=["extra-traits"] }
quote = "1.0"
proc-macro2 = "1"
serde = {version="1.0", features = ["derive"]}
rmp = "0.8"
rmp-serde = {version="1.1"}
flow-record-common = "0.1.0"
sha2 = "0.10.8"
