[package]
name = "flow-record-derive"
description = "derive crate for flow-record"
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="2.0", features=["extra-traits", "derive", "parsing"] }
quote = "1.0"
proc-macro2 = "1"
flow-record-common.workspace = true
chrono.workspace = true
darling = "0.20.10"
