[package]
name = "recorddescriptor_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="2.0", features=["extra-traits"] }
quote = "1.0"
proc-macro2 = "1"
record-types = {path="../record-types"}
once_cell = "1.18"